# idlib-network

./: CMakeLists.txt  README.md  building-under-linux.md  building-under-windows-11-visual-studio-community-2022.md  integrating-into-cmake-projects.md
documentation/: idlib-network.md
test/client/: CMakeLists.txt
test/client/sources/: main.c
test/server/: CMakeLists.txt
test/server/sources/: main.c
